[#IC-52] Use restricted payload for UpsertServiceActivation removed service_id and version from payload, service_id inferred from the api authorization
